@@ -29,7 +29,7 @@ echo Configuring...
 export CFLAGS="-Wall"
 #export CFLAGS="-Wall -pedantic"
 ./configure --enable-agent --enable-server --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-#./configure --enable-agent --enable-server --with-oracle --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+#./configure --enable-agent --enable-server --with-oracle=/home/zabbix/sqlora8 --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
 echo Cleaning...
 make clean 2>>WARNINGS >/dev/null
 echo Making...
